Solutions/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  labels:
    name: webapp
spec:
  containers:
  - name: webapp
    image: ghcr.io/go4clouds/webapp:v0.1.0
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - name: http
        containerPort: 80
