Solutions/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webapp
  name: webapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp
  type: ClusterIP
status:
  loadBalancer: {}
